# maximal-sub-matrices

./: README.md  functions.py  main.py  pyproject.toml
tests/: test_main.py
