[tool.poetry]
name = "maximal-sub-matrices"
version = "0.1.0"
description = ""
authors = [
    "Brian Hearn <brianhearn1998@gmail.com>",
    "Ben Dowling <ben.dowling@icloud.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
